mc-router/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-router
  namespace: minecraft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: mc.loibis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mc-router
                port:
                  number: 8080
  tls:
  - hosts:
    - mc.loibis.com
    secretName: mc-router-tls
